expandable macros up to 22 for now

--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,45 @@
           <pre readonly class="col form-control mb-0" id="outputFiltered" style="resize: none; overflow-y: auto; overflow-x: hidden; border-top-left-radius: 0; border-bottom-left-radius: 0;"></pre>
         </div>
 
+        <div class="row mb-1 collapsableRow showIfMacrosFilled">
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-11">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-12">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-13">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-14">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-15">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-16">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-17">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-18">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-19">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-20">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-21">
+            -
+          </button>
+          <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-22">
+            -
+          </button>
+        </div>
+
         <div class="row mb-1 collapsableRow">
           <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-1">
             -
