macro responsiveness fixes

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
           </button>
         </div>
 
-        <div class="row mb-1 collapsableRow">
+        <div class="row mb-1 collapsableRow" id="macroExpansionControl">
           <button type="button" class="col btn btn-outline-primary macroBtn" autocomplete="off", id="Macro-1">
             -
           </button>
