--- a/src/index.html
+++ b/src/index.html
@@ -193,8 +193,8 @@
         </div>
 
         <div class="row mb-1 collapsableRow">
-          <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn" id="sendMsgText" >
-          <button type="button" class="col-1 btn btn-outline-secondary darkBtn" type="button" id="sendMsgBtn" style="border-top-right-radius: 0; border-bottom-right-radius: 0;">Send</button>
+          <input type="text" class="col form-control" aria-label="txMsg" aria-describedby="sendMsgBtn" id="sendMsgText" style="border-top-right-radius: 0; border-bottom-right-radius: 0;">
+          <button type="button" class="col-1 btn btn-outline-secondary darkBtn" type="button" id="sendMsgBtn" style="border-radius: 0;">Send</button>
           <button type="button" class="col-auto btn btn-outline-secondary darkBtn dropup dropdown-toggle dropdown-toggle-split" id="macroDD" data-bs-toggle="dropdown" aria-expanded="false" style="border-top-left-radius: 0; border-bottom-left-radius: 0;">
             <span class="visually-hidden">Toggle Dropdown</span>
           </button>
