text wrapping for output windows

--- a/src/index.html
+++ b/src/index.html
@@ -113,8 +113,8 @@
         </div>
 
         <div class="row mb-1" id="outputRow">
-          <pre readonly class="col form-control mb-0" id="output" style="resize: none; overflow-y: auto; overflow-x: hidden; border-top-right-radius: 0; border-bottom-right-radius: 0;"></pre>
-          <pre readonly class="col form-control mb-0" id="outputFiltered" style="resize: none; overflow-y: auto; overflow-x: hidden; border-top-left-radius: 0; border-bottom-left-radius: 0;"></pre>
+          <pre readonly class="col form-control mb-0" id="output" style="resize: none; overflow-y: auto; overflow-x: hidden; border-top-right-radius: 0; border-bottom-right-radius: 0; white-space: pre-wrap;"></pre>
+          <pre readonly class="col form-control mb-0" id="outputFiltered" style="resize: none; overflow-y: auto; overflow-x: hidden; border-top-left-radius: 0; border-bottom-left-radius: 0; white-space: pre-wrap;"></pre>
         </div>
 
         <div class="row mb-1 collapsableRow showIfMacrosFilled">
