settings saving overhaul

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/bootstrap-nightfall.min.css" id="darkModeCss">
     <script src="../js/bootstrap.bundle.min.js"></script>
-    <script defer src="res/mainWin/render.js"></script>
+    <script defer src="res/mainWIn/loader-saver.js"></script>
     <script defer src="res/mainWin/popup.js"></script>
     <script defer src="res/mainWin/buttons.js"></script>
     <script defer src="res/mainWin/resizer.js"></script>
     <script defer src="res/mainWin/dropdowns.js"></script>
     <script defer src="res/mainWin/output.js"></script>
     <script defer src="res/mainWin/checkbox.js"></script>
+    <script defer src="res/mainWin/render.js"></script>
     <style>
       body {
         overflow-y: hidden;
